<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_movie_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_movie_details" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_movie_videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_movie_videos" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_movie_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_movie_reviews" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.fragment.app.FragmentContainerView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favourite_unselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_favourite"
        android:contentDescription="@string/add_to_favourites"
        android:layout_margin="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favourite_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:visibility="gone"
        android:src="@drawable/ic_favourite"
        app:tint="@color/favourite"
        android:contentDescription="@string/remove_from_favourites"
        android:layout_margin="16dp" />

</FrameLayout>
